--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.0",
         "axios": "^0.21",
+        "bootstrap": "^5.1.3",
+        "jquery": "^3.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.45.0",
+        "sass-loader": "^12.1.0"
     },
     "dependencies": {
-        "bootstrap": "^5.1.3"
+        "datatables.net-bs5": "^1.11.3"
     }
 }
